# autoSASfit

./: .gitignore  CLAUDE.md  PROGRESS.md  PROJECT_PLAN.md  README.md  pyproject.toml  setup_git.sh
references/: README.md
references/related_work/: ai_fitter_cao2026.md  auto_fitting.md  ml_for_sas.md  vision_llm_for_science.md
references/sasview/: bumps_fitters.md  data_formats.md  overview.md  sasmodels_models.md
scripts/: quickstart.py  run_baseline_eval.py  run_phase2_eval.py
src/autosasfit/: __init__.py
src/autosasfit/agent/: __init__.py  cache.py  prompts.py  schema.py
src/autosasfit/data/: __init__.py  loader.py  synthetic.py
src/autosasfit/eval/: __init__.py  corpus.py  harness.py  mcp_runner.py  report.py
src/autosasfit/fitting/: __init__.py  bumps_wrapper.py
src/autosasfit/loop/: __init__.py  controller.py
src/autosasfit/models/: __init__.py  registry.py
src/autosasfit/proposer/: __init__.py  base.py  heuristic.py  llm.py  random_proposer.py
src/autosasfit/skill/: __init__.py  mcp_server.py
src/autosasfit/viz/: __init__.py  plots.py
tests/: test_llm_proposer.py  test_mcp_runner.py  test_proposer_and_loop.py
